--- a/public/styles.css
+++ b/public/styles.css
@@ -39,3 +39,68 @@ button:hover {
     font-size: 18px;
     text-align: center;
 }
+
+.score-block {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 10px 0;
+    background-color: #f9f9f9;
+}
+
+.score-block strong {
+    font-size: 1.2em;
+    color: #333;
+}
+
+.quiz-container, .scores-container {
+    max-width: 800px;
+    margin: auto;
+    /* text-align: center; */
+}
+
+.score-block {
+    border: 1px solid #ccc;
+    padding: 15px;
+    margin: 10px 0;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+}
+
+.score-block strong {
+    font-size: 1.2em;
+    color: #333;
+}
+
+.view-scores, .back-to-quiz {
+    /* display: inline-block; */
+    margin-top: 20px;
+    padding: 10px 20px;
+    color: #fff;
+    background-color: #007bff;
+    text-decoration: none;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.view-scores:hover, .back-to-quiz:hover {
+    background-color: #0056b3;
+}
+
+
+input[type="text"] {
+    width: 100%;
+    max-width: 400px;
+    padding: 7px;
+    margin: 10px auto 0 auto;
+    /* border: 2px solid #007bff; */
+    border-radius: 5px;
+    font-size: 1em;
+    box-sizing: border-box;
+    transition: border-color 0.3s ease;
+}
+
+input[type="text"]:focus {
+    border-color: #0056b3;
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
