--- a/public/styles.css
+++ b/public/styles.css
@@ -72,7 +72,7 @@ button:hover {
 }
 
 .view-scores, .back-to-quiz {
-    /* display: inline-block; */
+    display: inline-block;
     margin-top: 20px;
     padding: 10px 20px;
     color: #fff;
